overflow fixed

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ section {
 
   body{
     background-color: #596e79;
+    overflow: hidden;
   }
   
   h1{
